add xiaomi qcom sdm845 419 devicetree

--- a/sdm845/sdm845-pmic-overlay.dtsi
+++ b/sdm845/sdm845-pmic-overlay.dtsi
@@ -36,11 +36,7 @@
 };
 
 &usb0 {
-	extcon = <&pmi8998_pdphy>, <&pmi8998_charger>, <&eud>;
-};
-
-&sde_dp {
-	extcon = <&pmi8998_pdphy>;
+	extcon = <&pmi8998_pdphy>, <&pmi8998_pdphy>, <&eud>;
 };
 
 &usb_qmp_dp_phy {
