--- a/display/dsi-panel-ebbg-fhd-ft8716-video.dtsi
+++ b/display/dsi-panel-ebbg-fhd-ft8716-video.dtsi
@@ -24,8 +24,8 @@
 		qcom,mdss-dsi-panel-sleepwrmod = <0>;
 		qcom,mdss-dsi-panel-type = "dsi_video_mode";
 
-		qcom,dsi-ctrl-num = <0 1>;
-		qcom,dsi-phy-num = <0 1>;
+		qcom,dsi-ctrl-num = <0>;
+		qcom,dsi-phy-num = <0>;
 		qcom,dsi-select-clocks = "mux_byte_clk0", "mux_pixel_clk0";
 
 		qcom,mdss-dsi-virtual-channel-id = <0>;
