add xiaomi qcom sdm845 419 devicetree

--- a/sdm845/sdm845-regulator.dtsi
+++ b/sdm845/sdm845-regulator.dtsi
@@ -387,6 +387,7 @@
 		reg = <0xff1000 0x60>;
 		regulator-name = "refgen";
 		regulator-enable-ramp-delay = <5>;
+		status = "disabled";
 		proxy-supply = <&refgen>;
 		qcom,proxy-consumer-enable;
 	};
