--- a/sdm845/sdm845.dtsi
+++ b/sdm845/sdm845.dtsi
@@ -12,7 +12,6 @@
 #include <dt-bindings/clock/qcom,rpmh.h>
 #include <dt-bindings/clock/qcom,rpmcc.h>
 #include <dt-bindings/clock/qcom,aop-qmp.h>
-#include <dt-bindings/reset/qcom,sdm845-aoss.h>
 #include <dt-bindings/regulator/qcom,rpmh-regulator-levels.h>
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 #include <dt-bindings/soc/qcom,rpmh-rsc.h>
@@ -1053,7 +1052,6 @@
 		qcom,fuse-disable-bit = <12>;
 		#address-cells = <2>;
 		#size-cells = <0>;
-		status = "disabled";
 
 		qcom,pm8998-debug@0 {
 			compatible = "qcom,spmi-pmic";
@@ -1526,6 +1524,7 @@
 		interrupts = <GIC_SPI 265 IRQ_TYPE_LEVEL_HIGH>;
 		phys = <&ufsphy_mem>;
 		phy-names = "ufsphy";
+		ufs-qcom-crypto = <&ufs_ice>;
 
 		lanes-per-direction = <2>;
 		dev-ref-clk-freq = <0>; /* 19.2 MHz */
@@ -1766,9 +1765,6 @@
 		/* Outputs to mss */
 		qcom,smem-states = <&modem_smp2p_out 0>;
 		qcom,smem-state-names = "qcom,force-stop";
-
-		resets = <&aoss_reset AOSS_CC_MSS_RESTART>;
-		reset-names = "mss_restart";
 
 		mboxes = <&qmp_aop 0>;
 		mbox-names = "mss-pil";
@@ -2411,12 +2407,6 @@
 		reg = <0x01f60000 0x20000>;
 	};
 
-	aoss_reset: reset-controller@c2a0000 {
-		compatible = "qcom,sdm845-aoss-cc";
-		reg = <0x0c2a0000 0x31000>;
-		#reset-cells = <1>;
-	};
-
 	smem: qcom,smem {
 		compatible = "qcom,smem";
 		memory-region = <&smem_mem>;
@@ -2903,8 +2893,8 @@
 			<125 512 400000 1000000>;
 		clock-names = "core_clk_src", "core_clk",
 				"iface_clk", "bus_clk";
-		clocks = <&clock_rpmh QCEDEV_CE1_CLK>,
-			 <&clock_rpmh QCEDEV_CE1_CLK>,
+		clocks = <&clock_gcc GCC_CE1_CLK>,
+			 <&clock_gcc GCC_CE1_CLK>,
 			 <&clock_gcc GCC_CE1_AHB_CLK>,
 			 <&clock_gcc GCC_CE1_AXI_CLK>;
 		qcom,ce-opp-freq = <171430000>;
@@ -3450,12 +3440,11 @@
 		qcom,wlan-msa-memory = <0x100000>;
 		qcom,wlan-msa-fixed-region = <&wlan_fw_region>;
 
-		vdd-0.8-cx-mx-supply = <&pm8998_l5>;
+		vdd-cx-mx-supply = <&pm8998_l5>;
 		vdd-1.8-xo-supply = <&pm8998_l7>;
 		vdd-1.3-rfa-supply = <&pm8998_l17>;
 		vdd-3.3-ch0-supply = <&pm8998_l25>;
-		vdd-3.3-ch1-supply = <&pm8998_l23>;
-		qcom,vdd-0.8-cx-mx-config = <800000 800000>;
+		qcom,vdd-cx-mx-config = <800000 800000>;
 		qcom,vdd-3.3-ch0-config = <3104000 3312000>;
 
 		qcom,smp2p_map_wlan_1_in {
