--- a/sdm845/sdm845-audio-overlay.dtsi
+++ b/sdm845/sdm845-audio-overlay.dtsi
@@ -60,6 +60,10 @@
 			<&wsa881x_0213>, <&wsa881x_0214>;
 	qcom,wsa-aux-dev-prefix = "SpkrLeft", "SpkrRight",
 				  "SpkrLeft", "SpkrRight";
+
+	qcom,codec-aux-devs = <&wcd934x_cdc>;
+
+	qcom,msm_audio_ssr_devs = <&audio_apr>, <&q6core>;
 };
 
 &soc {
