--- a/sdm845/sdm845.dtsi
+++ b/sdm845/sdm845.dtsi
@@ -497,12 +497,6 @@
 		};
 	};
 
-	cpu_pmu: cpu-pmu {
-		compatible = "arm,armv8-pmuv3";
-		qcom,irq-is-percpu;
-		interrupts = <GIC_PPI 5 IRQ_TYPE_LEVEL_HIGH>;
-	};
-
 	psci {
 		compatible = "arm,psci-1.0";
 		method = "smc";
@@ -1317,6 +1311,8 @@
 		clocks = <&clock_rpmh RPMH_CXO_CLK>, <&clock_gcc GPLL0>;
 		clock-names = "xo", "alternate";
 
+		qcom,no-accumulative-counter;
+
 		#freq-domain-cells = <2>;
 	};
 
@@ -1324,6 +1320,8 @@
 		compatible = "qcom,devfreq-fw";
 		reg = <0x17d41000 0x4>, <0x17d41110 0x500>, <0x17d41920 0x4>;
 		reg-names = "en-base", "ftbl-base", "perf-base";
+
+		qcom,ftbl-row-size = <32>;
 
 		cpu0_l3: qcom,cpu0-cpu-l3-lat {
 			compatible = "qcom,devfreq-fw-voter";
@@ -1336,6 +1334,12 @@
 		cdsp_l3: qcom,cdsp-cdsp-l3-lat {
 			compatible = "qcom,devfreq-fw-voter";
 		};
+	};
+
+	cpu_pmu: cpu-pmu {
+		compatible = "arm,armv8-pmuv3";
+		qcom,irq-is-percpu;
+		interrupts = <GIC_PPI 5 IRQ_TYPE_LEVEL_HIGH>;
 	};
 
 	clock_gcc: qcom,gcc@100000 {
